Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-13352

[C++] Valgrind failure in case_when kernel

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 5.0.0
    • C++

    Description

      https://github.com/ursacomputing/crossbow/runs/3083584283

      [ RUN      ] TestCaseWhen.FixedSizeBinary
      ==11732== Conditional jump or move depends on uninitialised value(s)
      ==11732==    at 0x41153FD: arrow::TestInitialized(arrow::ArrayData const&) (gtest_util.cc:665)
      ==11732==    by 0x75BE16: arrow::compute::(anonymous namespace)::ValidateOutput(arrow::ArrayData const&) (test_util.cc:231)
      ==11732==    by 0x75C3F6: arrow::compute::ValidateOutput(arrow::Datum const&) (test_util.cc:262)
      ==11732==    by 0x7609EA: arrow::compute::(anonymous namespace)::CheckScalarNonRecursive(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::vector<arrow::Datum, std::allocator<arrow::Datum> > const&, arrow::Datum const&, arrow::compute::FunctionOptions const*) (test_util.cc:52)
      ==11732==    by 0x764317: arrow::compute::CheckScalar(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::vector<arrow::Datum, std::allocator<arrow::Datum> > const&, arrow::Datum, arrow::compute::FunctionOptions const*) (test_util.cc:106)
      ==11732==    by 0x675AA7: arrow::compute::TestCaseWhen_FixedSizeBinary_Test::TestBody() (scalar_if_else_test.cc:798)
      ==11732==    by 0x5BBB98D: void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBBBE0: testing::Test::Run() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBBF0E: testing::TestInfo::Run() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBC035: testing::TestSuite::Run() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBC5EB: testing::internal::UnitTestImpl::RunAllTests() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBC858: testing::UnitTest::Run() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x41FB07E: main (in /opt/conda/envs/arrow/lib/libgtest_main.so)
      ==11732== 
      {
         <insert_a_suppression_name_here>
         Memcheck:Cond
         fun:_ZN5arrow15TestInitializedERKNS_9ArrayDataE
         fun:_ZN5arrow7compute12_GLOBAL__N_114ValidateOutputERKNS_9ArrayDataE
         fun:_ZN5arrow7compute14ValidateOutputERKNS_5DatumE
         fun:_ZN5arrow7compute12_GLOBAL__N_123CheckScalarNonRecursiveERKNSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEERKSt6vectorINS_5DatumESaISB_EERKSB_PKNS0_15FunctionOptionsE
         fun:_ZN5arrow7compute11CheckScalarENSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEERKSt6vectorINS_5DatumESaIS8_EES8_PKNS0_15FunctionOptionsE
         fun:_ZN5arrow7compute33TestCaseWhen_FixedSizeBinary_Test8TestBodyEv
         fun:_ZN7testing8internal35HandleExceptionsInMethodIfSupportedINS_4TestEvEET0_PT_MS4_FS3_vEPKc
         fun:_ZN7testing4Test3RunEv
         fun:_ZN7testing8TestInfo3RunEv
         fun:_ZN7testing9TestSuite3RunEv
         fun:_ZN7testing8internal12UnitTestImpl11RunAllTestsEv
         fun:_ZN7testing8UnitTest3RunEv
         fun:main
      }
      ==11732== Conditional jump or move depends on uninitialised value(s)
      ==11732==    at 0x41153FD: arrow::TestInitialized(arrow::ArrayData const&) (gtest_util.cc:665)
      ==11732==    by 0x411544E: arrow::TestInitialized(arrow::Array const&) (gtest_util.cc:646)
      ==11732==    by 0x75BFAF: arrow::compute::(anonymous namespace)::ValidateOutput(arrow::ChunkedArray const&) (test_util.cc:237)
      ==11732==    by 0x75C3C0: arrow::compute::ValidateOutput(arrow::Datum const&) (test_util.cc:265)
      ==11732==    by 0x765301: arrow::compute::CheckScalar(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::vector<arrow::Datum, std::allocator<arrow::Datum> > const&, arrow::Datum, arrow::compute::FunctionOptions const*) (test_util.cc:170)
      ==11732==    by 0x675AA7: arrow::compute::TestCaseWhen_FixedSizeBinary_Test::TestBody() (scalar_if_else_test.cc:798)
      ==11732==    by 0x5BBB98D: void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBBBE0: testing::Test::Run() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBBF0E: testing::TestInfo::Run() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBC035: testing::TestSuite::Run() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBC5EB: testing::internal::UnitTestImpl::RunAllTests() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x5BBC858: testing::UnitTest::Run() (in /opt/conda/envs/arrow/lib/libgtest.so)
      ==11732==    by 0x41FB07E: main (in /opt/conda/envs/arrow/lib/libgtest_main.so)
      ==11732== 
      {
         <insert_a_suppression_name_here>
         Memcheck:Cond
         fun:_ZN5arrow15TestInitializedERKNS_9ArrayDataE
         fun:_ZN5arrow15TestInitializedERKNS_5ArrayE
         fun:_ZN5arrow7compute12_GLOBAL__N_114ValidateOutputERKNS_12ChunkedArrayE
         fun:_ZN5arrow7compute14ValidateOutputERKNS_5DatumE
         fun:_ZN5arrow7compute11CheckScalarENSt7__cxx1112basic_stringIcSt11char_traitsIcESaIcEEERKSt6vectorINS_5DatumESaIS8_EES8_PKNS0_15FunctionOptionsE
         fun:_ZN5arrow7compute33TestCaseWhen_FixedSizeBinary_Test8TestBodyEv
         fun:_ZN7testing8internal35HandleExceptionsInMethodIfSupportedINS_4TestEvEET0_PT_MS4_FS3_vEPKc
         fun:_ZN7testing4Test3RunEv
         fun:_ZN7testing8TestInfo3RunEv
         fun:_ZN7testing9TestSuite3RunEv
         fun:_ZN7testing8internal12UnitTestImpl11RunAllTestsEv
         fun:_ZN7testing8UnitTest3RunEv
         fun:main
      }
      [       OK ] TestCaseWhen.FixedSizeBinary (171 ms)
      [ RUN      ] TestCaseWhen.DispatchBest
      [       OK ] TestCaseWhen.DispatchBest (36 ms)
      [----------] 6 tests from TestCaseWhen (889 ms total)
      
      [----------] Global test environment tear-down
      [==========] 771 tests from 180 test suites ran. (50602 ms total)
      [  PASSED  ] 771 tests.
      
        YOU HAVE 1 DISABLED TEST
      
      ==11732== 
      ==11732== HEAP SUMMARY:
      ==11732==     in use at exit: 10,082 bytes in 160 blocks
      ==11732==   total heap usage: 3,142,063 allocs, 3,141,903 frees, 1,148,265,868 bytes allocated
      ==11732== 
      ==11732== LEAK SUMMARY:
      ==11732==    definitely lost: 0 bytes in 0 blocks
      ==11732==    indirectly lost: 0 bytes in 0 blocks
      ==11732==      possibly lost: 0 bytes in 0 blocks
      ==11732==    still reachable: 10,082 bytes in 160 blocks
      ==11732==         suppressed: 0 bytes in 0 blocks
      ==11732== Reachable blocks (those to which a pointer was found) are not shown.
      ==11732== To see them, rerun with: --leak-check=full --show-leak-kinds=all
      ==11732== 
      ==11732== Use --track-origins=yes to see where uninitialised values come from
      ==11732== For lists of detected and suppressed errors, rerun with: -s
      ==11732== ERROR SUMMARY: 18 errors from 2 contexts (suppressed: 401021 from 59)
      
            Start 32: arrow-compute-expression-test
      

      Attachments

        Issue Links

          Activity

            People

              lidavidm David Li
              lidavidm David Li
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m