ARROW-13352: [C++] Make sure scalar case_when fully initializes output